.provarCaches/00D410000011HE0EAM/objects/rstk__soconpbbatch__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_soconpbbatch</customHelpPage>
    <description>soconpbbatch__c</description>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soconpbbatch_runno__c +&quot; (&quot; +TEXT(rstk__soconpbbatch_rundate__c )+&quot;)&quot;</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbbatch_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Sales Division in which the Contract being billed exists.</inlineHelpText>
        <label>Sales Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Billing Run Batch Header</relationshipLabel>
        <relationshipName>soconpbbatchs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbbatch_invdate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbbatch_rundate__c</fullName>
        <inlineHelpText>The date of this Billing run.</inlineHelpText>
        <label>Billing Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbbatch_rundatetime__c</fullName>
        <inlineHelpText>The date/time of this Billing run.</inlineHelpText>
        <label>Billing Run Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbbatch_runno__c</fullName>
        <displayFormat>B-{0000}</displayFormat>
        <inlineHelpText>System-generated run number for this Billing run.</inlineHelpText>
        <label>Billing Run Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbbatch_soibatch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>System-generated batch number that Sales Invoices created from this Billing run are included in.</inlineHelpText>
        <label>Sales Invoice Batch</label>
        <referenceTo>rstk__soibatch__c</referenceTo>
        <relationshipLabel>Billing Run Batch Header</relationshipLabel>
        <relationshipName>soconpbbatchs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Billing Run Batch Header</label>
    <listViews>
        <fullName>rstk__RS_Billing_Run_Batch_Header</fullName>
        <columns>NAME</columns>
        <columns>rstk__soconpbbatch_div__c</columns>
        <columns>rstk__soconpbbatch_runno__c</columns>
        <columns>rstk__soconpbbatch_rundate__c</columns>
        <columns>rstk__soconpbbatch_rundatetime__c</columns>
        <columns>rstk__soconpbbatch_soibatch__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Billing Run Batch Header</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Run Batch Header</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Invoice_Date</fullName>
        <active>true</active>
        <description>Invoice Date is not modifiable as invoice is already created.</description>
        <errorConditionFormula>NOT( ISBLANK(rstk__soconpbbatch_invdate__c) ) &amp;&amp;  ISCHANGED(rstk__soconpbbatch_invdate__c) &amp;&amp;  NOT( ISBLANK(rstk__soconpbbatch_soibatch__c) )</errorConditionFormula>
        <errorMessage>Invoice Date is not modifiable as invoice is already created.</errorMessage>
    </validationRules>
</CustomObject>